--- a/gerenciamento-de-dependencias-e-build-com-maven/quick-start-maven/pom.xml
+++ b/gerenciamento-de-dependencias-e-build-com-maven/quick-start-maven/pom.xml
@@ -7,14 +7,24 @@
   <version>1.0-SNAPSHOT</version>
   <name>quick-start-maven</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>7.0.1.Final</version>
+    </dependency>
+
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
