--- a/desafio-academia-digital/src/main/resources/application.yml
+++ b/desafio-academia-digital/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server.port: 8081
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/academia?useTimezone=true&serverTimezone=UTC&useLegacyDate
-    username: cami
+    url: jdbc:mysql://localhost:3306/academia?useTimezone=true&serverTimezone=UTC&useLegacyDate
+    username: root
     password: root
   jpa:
     show-sql: true
