--- a/desafio-academia-digital/src/main/resources/application.yml
+++ b/desafio-academia-digital/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     url: jdbc:mysql://localhost:3306/academia?useTimezone=true&serverTimezone=UTC&useLegacyDate
     username: root
     password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
     hibernate:
