pom refatorado para rodar a aplicação

--- a/desafio-padroes-projeto-spring/pom.xml
+++ b/desafio-padroes-projeto-spring/pom.xml
@@ -69,9 +69,15 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
+				<version>2021.0.3</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>io.github.classgraph</groupId>
+				<artifactId>classgraph</artifactId>
+				<version>4.8.149</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
